# muxie

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Cargo.toml  Justfile  LICENSE  Makefile.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
assets/: browser-demux.desktop  muxie.desktop
resources/packaging/debian/: xyz.adf.Muxie.service
scripts/smoke/: deb-smoke.sh  nix-smoke.sh  rpm-smoke.sh
src/: asset.rs  browser.rs  cli.rs  client.rs  config.rs  daemon.rs  dialog.rs  install.rs  main.rs  notify.rs  open.rs  paths.rs  pattern.rs  state.rs  uninstall.rs  util.rs
