[package]
name = "muxie"
version = "0.3.0"
edition = "2024"
description = "A browser router that intelligently opens URLs in different browsers based on configurable wildcard patterns."
license = "MIT"
authors = ["Andrey Fedoseev"]
keywords = ["browser", "routing", "url", "linux"]
categories = ["command-line-utilities"]
homepage = "https://github.com/adfxyz/muxie/"
repository = "https://github.com/adfxyz/muxie/"
readme = "README.md"
documentation = "https://github.com/adfxyz/muxie/#readme"

[dependencies]
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
freedesktop-desktop-entry = "0.5.0"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
wildflower = "0.1.1"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
notify-rust = { version = "4.11.0", default-features = false, features = ["z"] }
zbus = { version = "5", features = ["blocking"] }
zbus_names = "4"
notify = "6"
libc = "0.2"

[features]
default = ["self-install"]
# Enables `muxie install`/`uninstall` commands that manage user-level desktop integration
# and embeds assets (icons, desktop file) used by that flow.
self-install = []

[package.metadata.deb]
section = "utils"
priority = "optional"
depends = []
suggests = ["kdialog | zenity | yad"]
assets = [
  ["target/release/muxie", "/usr/bin/muxie", "755"],
  ["assets/muxie.desktop", "/usr/share/applications/muxie.desktop", "644"],
  ["assets/icons/32x32/muxie.png", "/usr/share/icons/hicolor/32x32/apps/muxie.png", "644"],
  ["assets/icons/48x48/muxie.png", "/usr/share/icons/hicolor/48x48/apps/muxie.png", "644"],
  ["assets/icons/64x64/muxie.png", "/usr/share/icons/hicolor/64x64/apps/muxie.png", "644"],
  ["assets/icons/96x96/muxie.png", "/usr/share/icons/hicolor/96x96/apps/muxie.png", "644"],
  ["assets/icons/128x128/muxie.png", "/usr/share/icons/hicolor/128x128/apps/muxie.png", "644"],
  ["assets/icons/256x256/muxie.png", "/usr/share/icons/hicolor/256x256/apps/muxie.png", "644"],
  ["assets/icons/scalable/muxie.svg", "/usr/share/icons/hicolor/scalable/apps/muxie.svg", "644"],
  ["resources/packaging/debian/xyz.adf.Muxie.service", "/usr/share/dbus-1/services/xyz.adf.Muxie.service", "644"],
]
maintainer = "Andrey Fedoseev"
license-file = ["LICENSE"]
extended-description = """
Muxie is a browser demultiplexer for Linux. It intercepts URL opens and routes
them to different browsers based on configurable patterns, supports a native
selection dialog when multiple browsers are eligible, and integrates with D-Bus
for background operation and config auto-reload. Configuration is TOML-based and
installed to the user config directory. Muxie should be installed as the default
browser.
"""

[package.metadata.generate-rpm]
summary = "Browser demultiplexer that routes URLs to different browsers via patterns"
release = 1
assets = [
  { source = "target/release/muxie", dest = "/usr/bin/muxie", mode = "0755" },
  { source = "assets/muxie.desktop", dest = "/usr/share/applications/muxie.desktop", mode = "0644" },
  { source = "assets/icons/32x32/muxie.png", dest = "/usr/share/icons/hicolor/32x32/apps/muxie.png", mode = "0644" },
  { source = "assets/icons/48x48/muxie.png", dest = "/usr/share/icons/hicolor/48x48/apps/muxie.png", mode = "0644" },
  { source = "assets/icons/64x64/muxie.png", dest = "/usr/share/icons/hicolor/64x64/apps/muxie.png", mode = "0644" },
  { source = "assets/icons/96x96/muxie.png", dest = "/usr/share/icons/hicolor/96x96/apps/muxie.png", mode = "0644" },
  { source = "assets/icons/128x128/muxie.png", dest = "/usr/share/icons/hicolor/128x128/apps/muxie.png", mode = "0644" },
  { source = "assets/icons/256x256/muxie.png", dest = "/usr/share/icons/hicolor/256x256/apps/muxie.png", mode = "0644" },
  { source = "assets/icons/scalable/muxie.svg", dest = "/usr/share/icons/hicolor/scalable/apps/muxie.svg", mode = "0644" },
  { source = "resources/packaging/debian/xyz.adf.Muxie.service", dest = "/usr/share/dbus-1/services/xyz.adf.Muxie.service", mode = "0644" },
]
